--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ tqm-*.tar
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
+
+# Ignore cert files
+/priv/cert/*
