update: host name in fly.toml
The old host in the fly toml was the fly app name. The host has been
updated in this commit to the website domain name. This was necessary
for the website certs to load properly (and additionally for websockets
to work properly)

--- a/fly.toml
+++ b/fly.toml
@@ -9,7 +9,7 @@ processes = []
   release_command = "/app/bin/migrate"
 
 [env]
-  PHX_HOST = "tqm-website.fly.dev"
+  PHX_HOST = "quigleymalcolm.com"
   PORT = "8080"
 
 [experimental]
